--- a/TheGame/App.config
+++ b/TheGame/App.config
@@ -6,6 +6,8 @@
         <add name="TheGame.My.MySettings.hardware_pcbsConnectionString"
             connectionString="server=192.168.2.3;user id=J2ghz;password=passprovs;persistsecurityinfo=True;database=hardware_pcbs"
             providerName="MySql.Data.MySqlClient" />
+        <add name="TheGame.My.MySettings.trhConnectionString" connectionString="server=192.168.1.1;user id=VS;persistsecurityinfo=True;database=trh"
+            providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
