--- a/TheGame/My Project/Settings.settings
+++ b/TheGame/My Project/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">server=192.168.2.3;user id=J2ghz;password=passprovs;persistsecurityinfo=True;database=hardware_pcbs</Value>
     </Setting>
+    <Setting Name="trhConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;server=192.168.1.1;user id=VS;persistsecurityinfo=True;database=trh&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;MySql.Data.MySqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">server=192.168.1.1;user id=VS;persistsecurityinfo=True;database=trh</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
