--- a/TheGameGenerator/App.config
+++ b/TheGameGenerator/App.config
@@ -3,10 +3,11 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="TheGame.My.MySettings.trhConnectionString" connectionString="server=192.168.1.1;user id=VS;persistsecurityinfo=True;database=trh;password=hesloprovs"
+        <add name="TheGameGenerator.My.MySettings.trhConnectionString"
+            connectionString="server=192.168.1.1;user id=VS;password=hesloprovs;persistsecurityinfo=True;database=trh"
             providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
-    <startup>
+    <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
 </configuration>
