--- a/TheGameGenerator/App.config
+++ b/TheGameGenerator/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="TheGameGenerator.My.MySettings.trhConnectionString" connectionString="server=192.168.1.1;user id=VS;password=hesloprovs;persistsecurityinfo=True;database=trh" providerName="MySql.Data.MySqlClient" />
-  </connectionStrings>
+  <add name="trhEntities" connectionString="metadata=res://*/Database.csdl|res://*/Database.ssdl|res://*/Database.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.1.1;user id=VS;password=hesloprovs;persistsecurityinfo=True;database=trh&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
@@ -18,6 +18,7 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
     </providers>
   </entityFramework>
 </configuration>
